examples/tests/semantic/fail/wrongWhileLoopCondition.tig
let 
    var taylor := "taylor"
in 
    while taylor do 
        taylor := "taylor"
end 